src/index.css
/* ... */
.App * {
    font: var(--font);
    -webkit-font-smoothing: antialiased; /* supports Japanese characters better than 'none' */
    -moz-osx-font-smoothing: grayscale; /* Firefox */
    -webkit-tap-highlight-color: rgba(0,0,0,0);
    text-decoration: none;
}

[data-theme="msdos"] {
    --font: var(--fontPxPlusChipPlayer);

    --message-box-background: var(--button);
    --message-box-color: var(--clickable);
    --message-box-info-text-color: var(--clickable);
    --message-box-inner-border: 1px solid var(--clickable);
    --message-box-box-shadow: var(--charW1) var(--charW1) var(--shadow);
    --msdos-box-shadow: var(--charW1) var(--charW1) var(--shadow);
    --hide-mtime-column-below-width: 800px;

    /* chunky DOS animation */
    .message-box { transition: all 250ms steps(5); }
    .toast-box-outer { transition: all 150ms steps(4); }

    *::selection {
        background: rgba(170, 170, 170, 0.99);
        color: var(--background);
    }

    a:active { background: var(--active); }
}

[data-theme="msdos"] a:focus,
[data-theme="msdos"] button:focus,
[data-theme="msdos"] select:focus,
[data-theme="msdos"] input:focus,
[data-theme="msdos"] input[type=checkbox]:focus,
[data-theme="msdos"] input[type=radio]:focus,
[data-theme="msdos"] input[type=range]:focus {
    outline: none;
    background-color: var(--focus);
}

input,
button,
select,
textarea {
    font: inherit;
}

/* Basic elements */

body {
    background: var(--background);
    overflow: hidden;
    color: var(--neutral2);
}

/* Margins in one direction (bottom) */
h1, h2, h3, h4, h5, h6 {
    &:first-child {
        margin: 0 0 var(--charH) 0;
    }
    color: var(--neutral4);
    margin: var(--charH) 0;
    padding: 0;
    font-weight: normal;
}

p { margin: 0 0 var(--charH) 0; }

a {
    text-decoration: none;
    color: var(--clickable);
    cursor: pointer;
}

a:visited { color: var(--clickable); }

[data-theme="msdos"] {

    /* Form elements */

button {
    border: none;
    border-radius: 0;
    padding: 0;
    text-wrap: nowrap;
    align-self: start;
    -moz-appearance: none;
    -webkit-appearance: none;
    color: var(--clickable);
}
select {
    border: none;
    border-radius: 0;
    -moz-appearance: none;
    -webkit-appearance: none;
    padding: 0 calc(var(--charW1) * 3) 0 var(--charW1);
    color: var(--clickable);
    background-color: var(--button);
    background-image: /* A little down-arrow */
            linear-gradient(60deg, transparent 50%, var(--clickable) 50%),
            linear-gradient(120deg, var(--clickable) 50%, transparent 50%);
    background-position: calc(100% - var(--charW1)*1.5) 5px, calc(100% - var(--charW1)) 5px;
    background-size: calc(var(--charW1)*0.5) 12px, calc(var(--charW1)*0.5) 12px;
    background-repeat: no-repeat;
    max-width: 224px;
}
select option                { font-size: 14px; }
.Song-now-playing .FavoriteButton:not(.isFavorite) { color: var(--background); }
  @media screen and (max-width: 800px) { .BrowseList-colMtime { display: none } }
  @container (max-width: 800px) { .BrowseList-colMtime { display: none } }
button:active   { background: var(--active); }
button:disabled { background: var(--neutral1); color: var(--neutral3); }
.box-button     { background: var(--button); box-shadow: var(--msdos-box-shadow); white-space: pre; padding: 0 var(--charW2); }
.box-button:active { box-shadow: none; }

    .tab {
        padding: 0 15px 0 15px;
        background: transparent;
        border: 1px solid var(--clickable);
        border-bottom: none;
        border-radius: 3px 3px 0 0;
        box-sizing: border-box;
        height: var(--charH);
    }

    .tab-selected {
        border-bottom: 1px solid var(--background);
        background: var(--background);
        margin-bottom: -1px;
        height: calc(var(--charH) + 1px);
    }
    input[type=checkbox],
    input[type=radio] {
        appearance: none;
        background: transparent;
        border: 0;
        border-radius: 0;
        margin: 0 var(--charW1) 0 0;
        color: var(--clickable);
        white-space: pre;  /* prevent iOS Safari text wrapping */
    }

    input[type=checkbox]:before         { content: '[ ]'; }
    input[type=checkbox]:checked:before { content: '[️x]'; }

    input[type=radio]:before            { content: '( )'; }
    input[type=radio]:checked:before    { content: '(•)'; }
  input[type=text]::selection                 { background-color: #FFFFFF; }
  input[type=text]::-webkit-input-placeholder { color: var(--neutral1) }
}

[data-theme="msdos"] input[type=text] {
    border: 0;
    border-radius: 0;
    background-color: var(--neutral2);
    color: var(--background);
    padding: 0 var(--charW1);
    width: 256px;
    height: var(--charH); /* Firefox */
}

.inline { display: inline-block; margin-right: var(--charW1);   }
.inline:last-child { margin-right: 0; }

input[type=range] {
    margin: 0;
    -webkit-appearance: none;
    background: transparent;
    vertical-align: bottom;
    height: var(--charH); /* Firefox */
    width: 128px; /* Firefox */
}
input[type=range]::-webkit-slider-runnable-track {
    height: var(--railH);
    border: 1px solid var(--clickable);
    margin: var(--charW1) 0;
}
input[type=range]::-moz-range-track { /* Firefox */
    height: var(--railH);
    border: 1px solid var(--clickable);
    margin: var(--charW1) 0;
    box-sizing: border-box;
}

input[type=range]:disabled::-webkit-slider-runnable-track { border-color: var(--neutral2); }
input[type=range]:disabled::-moz-range-track { border-color: var(--neutral2); } /* Firefox */
input[type=range]:disabled::-webkit-slider-thumb { background: var(--neutral2); }
input[type=range]:disabled::-moz-range-thumb { background: var(--neutral2); } /* Firefox */
input[type=range]::-webkit-slider-thumb {
    -webkit-appearance: none;
    background: var(--clickable);
    height: var(--knobH);
    margin-top: calc(var(--knobH) / -2);
    width: var(--knobW);
}
/* ... */

